# vulkan-engine

./: .gitattributes  .gitignore  CMakeLists.txt  compile-shaders.sh  main.cpp
core/: game.hpp
glfw/: window.cpp  window.hpp
graphics/: buffer.cpp  buffer.hpp  device.cpp  device.hpp  image.cpp  image.hpp  physical-device.cpp  physical-device.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  uniform-buffer-object.hpp  validation.cpp  validation.hpp  vertex.cpp  vertex.hpp  vulkan-state.cpp  vulkan-state.hpp
graphics/shaders/: shader.frag  shader.vert
includes/: stb_image.h  vma.hpp
logger/: logger.cpp  logger.hpp
util/: algorithm.cpp  algorithm.hpp  runnable.cpp  runnable.hpp
